# replace_bixby

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: load_config.yml  pipeline_config.yml  preprocess_config.yml
notebooks/: model_dev_nb.ipynb
src/: AWSClientService.py  AWSHandler.py  dataset_manager.py  download_data.py  execute_pipeline.py  file_handler.py  load_data.py  pipeline_handler.py  preproces_data.py  preprocess.py  preprocess_data.py  preprocessor.py  useful.py  utils.py
src/data/: load_data.py
src/utils/: AWSClientService.py
