[project]
name = "replace_bixby"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "HenningGC", email = "henning@gruhl.me"},
]
dependencies = [
    "boto3>=1.34.152",
    "replace-bixby @ file:///${PROJECT_ROOT}/",
    "python-dotenv>=1.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false