#========================================================================================================================
# Project Settings
#========================================================================================================================
[project]
name = "replace_bixby"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "HenningGC", email = "henning@gruhl.me"},
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

#========================================================================================================================
# Prod Dependencies
#========================================================================================================================
dependencies = [
    "boto3>=1.34.152",
]

#========================================================================================================================
# Dev Dependencies
#========================================================================================================================
[project.optional-dependencies]
dev = [
    "boto3>=1.34.152",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "pyyaml>=6.0.1",
]

model_dev = [
    "ipykernel>=6.29.5",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.43.3",
    "datasets>=2.20.0",
    "scikit-learn>=1.5.1",
]

#========================================================================================================================
# PDM Settings
#========================================================================================================================
[tool.pdm]
distribution = false